--- a/style.css
+++ b/style.css
@@ -1,175 +1,182 @@
-body{
-    font-family: 'Roboto Slab', serif;
-    margin: 0;
+body {
+  font-family: 'Roboto Slab', serif;
+  margin: 0;
 }
 
-h2{
-    font-weight: 400;
-}
-p{
-  color:dimgray;
-}
-.top-banner{
-    background-image: url("images/header-bg.png");
-    background-repeat: no-repeat;
-    height: 700px;
-    
-    
-  }
-
-  
-
-
-.intro-part{
-   
-    float:left;
-    width:40%;
-    margin-left: 13%;
-    padding-left: 2%;
-    padding-top: 180px;
-   
-}
-.image-part{
-    width:40%;
-    padding-top: 100px;
-    float:left;
-   
-  }
-
-  .image-part img{
-    width:100%;
-    
-  }
-
-  .name-highlight{
-    color:#EC4C79;
-    font-size: 30px;
+h2 {
+  font-weight: 400;
 }
 
-.link-button{
-    text-decoration: none;
-    font-size: 17px;
-    background-color: #EC4C79;
-    padding: 7px 25px;
-    border-radius: 5px;
-    color:#fff;
-    font-weight: 400;
-    text-transform: capitalize;
-    margin-top:40px;
-    display: block;
-    width:80px;
-    text-align: center;
-  }
+p {
+  color: dimgray;
+}
 
-.dream-area{
-  background-image: url("images/biography-bg.png");
+/**** 
+top banner css
+****/
+
+.top-banner {
+  background-image: url("images/header-bg.png");
   background-repeat: no-repeat;
-  height: 875px;
- 
- 
-  
-}  
+  height: 700px;
+}
 
-.dream-image{
-  float:left;
+.intro-part {
+  float: left;
+  width: 40%;
+  margin-left: 13%;
+  padding-left: 2%;
+  padding-top: 180px;
+}
+
+.image-part {
+  width: 40%;
+  padding-top: 100px;
+  float: left;
+}
+
+.image-part img {
+  width: 100%;
+}
+
+.name-highlight {
+  color: #EC4C79;
+  font-size: 30px;
+}
+
+.link-button {
+  text-decoration: none;
+  font-size: 17px;
+  background-color: #EC4C79;
+  padding: 7px 25px;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: 400;
+  text-transform: capitalize;
+  margin-top: 40px;
+  display: block;
+  width: 80px;
+  text-align: center;
+}
+
+/**** 
+Dream Area banner css
+****/
+
+.dream-area {
+  height: 875px;
+  width: 100%;
+  background: url("images/biography-bg.png") no-repeat;
+  background-size: cover;
+}
+
+.dream-image {
+  float: left;
   width: 40%;
   margin-left: 10%;
   margin-top: 100px;
 }
-.dream-image img{
+
+.dream-image img {
   width: 100%;
-  
 }
 
-
-.dream-intro{
+.dream-intro {
   float: left;
   width: 40%;
   margin-left: 7%;
   margin-top: 200px;
 }
-.dream-intro p{
+
+.dream-intro p {
   text-align: justify;
 }
 
-.dream-highlight{
-  color:#000;
+.dream-highlight {
+  color: #000;
   font-size: 23px;
 }
-.download-button{
 
+.download-button {
   text-decoration: none;
-    font-size: 15px;
-    background-color: #EC4C79;
-    padding: 10px 25px;;
-    border-radius: 5px;
-    color:#fff;
-    font-weight: 400;
-    text-transform: capitalize;
-    margin-top:40px;
-    display: block;
-    width: 120px;
-    
-    text-align: center;
-
+  font-size: 15px;
+  background-color: #EC4C79;
+  padding: 10px 25px;
+  ;
+  border-radius: 5px;
+  color: #fff;
+  font-weight: 400;
+  text-transform: capitalize;
+  margin-top: 40px;
+  display: block;
+  width: 120px;
+  text-align: center;
 }
 
-.latest-work-area{
+/**** 
+Latest work area css
+****/
+
+.latest-work-area {
   background-image: url("images/latest-work-bg.png");
   background-repeat: no-repeat;
   height: 520px;
-  
-  
-  
 }
-.latest-work-title{
+
+.latest-work-title {
   color: #000;
   text-align: center;
   margin-top: 100px;
   font-size: 30px;
   margin-bottom: 50px;
 }
-.recent-work-image {
- text-align: center;
- margin-left: 3%;
- margin-right: 5%;
 
+.recent-work-image {
+  text-align: center;
+  margin-left: 3%;
+  margin-right: 5%;
 }
-.recent-work-image img{
+
+.recent-work-image img {
   width: 28%;
   margin-left: 2%;
-  
 }
-.client-say-area{
+
+/**** 
+Client say & contact area css
+****/
+
+.client-say-area {
   background-image: url("images/footer-bg.png");
   background-repeat: no-repeat;
   height: 520px;
 }
-.client-say-area h1{
+
+.client-say-area h1 {
   color: #000;
   text-align: center;
   font-size: 30px;
   margin-bottom: 50px;
 }
-.client-say-area h3{
+
+.client-say-area h3 {
   color: #007;
   text-align: center;
   font-size: 20px;
   font-weight: 500;
   margin-bottom: 0;
   padding-bottom: 0;
-  
 }
-.client-say-area p{
-  color:dimgray;
+
+.client-say-area p {
+  color: dimgray;
   text-align: center;
   font-size: 15px;
   font-weight: 500;
   margin: 2px;
-  
 }
 
- q{
+q {
   color: #007;
   text-align: center;
   font-size: 15px;
@@ -180,36 +187,31 @@ p{
   margin-bottom: 70px;
 }
 
-.contact-area{
-  
+.contact-area {
   background-color: #EC4C79;
   text-align: center;
   width: 40%;
   margin: 0 auto;
   border-radius: 5px;
-  
-  
-  
- 
-    
-}
-.contact-area h5{
- padding-top: 30px;
- color: #fff;
-
 }
 
-.contact-area h3{
-  padding-bottom: 30px;
- 
-  color:#fff;
+.contact-area h5 {
+  padding-top: 30px;
+  color: #fff;
+  font-size: 15px;
 }
 
-footer p{
+.contact-area h3 {
+  padding-bottom: 40px;
+  color: #fff;
+}
+
+/**** 
+Footer 
+****/
+
+footer p {
   margin-top: 50px;
   text-align: center;
   font-size: 14px;
 }
-
-
-
